Fix logo div overlap on nav

--- a/app/styles/_navigation.scss
+++ b/app/styles/_navigation.scss
@@ -8,7 +8,6 @@
   @include fixed-position-bugfix();
 
   .brand-site {
-    width: 50%;
     margin: 1em auto;
   }
 
